@@ -1089,10 +1089,12 @@ gtk_entry_class_init (GtkEntryClass *class)
   /**
    * GtkEntry:im-module:
    *
-   * Which IM module should be used for this entry.
+   * Which IM (input method) module should be used for this entry. 
+   * See #GtkIMContext.
    * 
    * Setting this to a non-%NULL value overrides the
-   * system-wide IM module setting. See #GtkSettings:gtk-im-module
+   * system-wide IM module setting. See the GtkSettings 
+   * #GtkSettings:gtk-im-module property.
    *
    * Since: 2.16
    */  
