@@ -35,6 +35,18 @@
  * is used by GTK+ text input widgets like #GtkEntry to map from key events to
  * Unicode character strings.
  *
+ * The user may change the current input method via a context menu, unless the   
+ * #GtkSettings:gtk-show-input-method-menu GtkSettings property is set to FALSE. 
+ * The default input method can be set programmatically via the 
+ * #GtkSettings:gtk-im-module GtkSettings property. Alternatively, you may set 
+ * the GTK_IM_MODULE environment variable as documented in #gtk-running.
+ *
+ * The #GtkEntry #GtkEntry:im-module and #GtkTextView #GtkTextView:im-module 
+ * properties may also be used to set input methods for specific widget 
+ * instances. For instance, a certain entry widget might be expected to contain 
+ * certain characters which would be easier to input with a certain input 
+ * method.
+ *
  * An input method may consume multiple key events in sequence and finally
  * output the composed result. This is called preediting, and an input method
  * may provide feedback about this process by displaying the intermediate
